--- a/src/main/resources/com/example/graf/graf-view.fxml
+++ b/src/main/resources/com/example/graf/graf-view.fxml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.geometry.Rectangle2D?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Spinner?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
@@ -12,35 +15,24 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane fx:id="mainBorderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.graf.GrafController">
+<BorderPane fx:id="mainBorderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.graf.GrafController">
    <top>
       <HBox nodeOrientation="LEFT_TO_RIGHT" spacing="16.0" style="-fx-background-color: lightblue;" BorderPane.alignment="CENTER">
          <children>
-            <AnchorPane prefHeight="53.0" prefWidth="249.0">
+            <AnchorPane>
                <children>
-                  <Label layoutY="21.0" prefHeight="20.0" prefWidth="186.0" text="Количество вершин графа:">
+                  <Label layoutX="2.0" layoutY="5.0" prefWidth="100.0" text="Начало пути:">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <Spinner fx:id="vertexSpinner" layoutX="179.0" layoutY="19.0" prefHeight="25.0" prefWidth="70.0" />
-               </children>
-            </AnchorPane>
-            <Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" HBox.hgrow="ALWAYS" />
-            <AnchorPane prefHeight="62.0" prefWidth="153.0">
-               <children>
-                  <TextField fx:id="from" layoutX="90.0" layoutY="2.0" prefHeight="25.0" prefWidth="70.0" />
-                  <TextField fx:id="to" layoutX="90.0" layoutY="37.0" prefHeight="25.0" prefWidth="70.0" />
-                  <Label layoutX="6.0" layoutY="5.0" text="Начало пути:">
+                  <Label layoutX="2.0" layoutY="42.0" prefWidth="100.0" text="Конец пути:">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <Label layoutX="14.0" layoutY="40.0" text="Конец пути:">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                  </Label>
+                  <ComboBox fx:id="from" layoutX="99.0" layoutY="2.0" prefWidth="400.0" />
+                  <ComboBox fx:id="to" layoutX="99.0" layoutY="41.0" prefWidth="400.0" />
                </children>
             </AnchorPane>
          </children>
@@ -59,14 +51,32 @@
          </padding>
       </VBox>
    </bottom>
+   <left>
+      <ScrollPane fx:id="matrixScrollPane" prefHeight="400.0" prefWidth="600.0" BorderPane.alignment="CENTER" />
+   </left>
    <right>
-      <Text fx:id="stantionList" strokeType="OUTSIDE" strokeWidth="0.0" BorderPane.alignment="CENTER">
-         <BorderPane.margin>
-            <Insets bottom="16.0" left="16.0" right="16.0" top="16.0" />
-         </BorderPane.margin>
-         <font>
-            <Font size="14.0" />
-         </font>
-      </Text>
+      <ScrollPane prefHeight="400.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+        <content>
+          <AnchorPane minHeight="0.0" minWidth="0.0">
+               <children>
+                  <Text fx:id="stantionList" layoutX="13.0" layoutY="29.0" strokeType="OUTSIDE" strokeWidth="0.0">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Text>
+               </children>
+            </AnchorPane>
+        </content>
+      </ScrollPane>
    </right>
+   <center>
+      <ImageView fitHeight="600.0" fitWidth="400.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
+         <image>
+            <Image url="@ufff.jpg" />
+         </image>
+         <viewport>
+            <Rectangle2D />
+         </viewport>
+      </ImageView>
+   </center>
 </BorderPane>
